tests/dataset/tpc-ds/compiler/c/q6.error
/tmp/q6.c: In function ‘test_TPCDS_Q6_result’:
/tmp/q6.c:254:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  254 |   if (test_TPCDS_Q6_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/q6.c:258:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  258 |       if (test_TPCDS_Q6_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/q6.c: In function ‘main’:
/tmp/q6.c:328:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  328 |     _json_string(it.state);
      |                  ~~^~~~~~
/tmp/q6.c:74:32: note: expected ‘char *’ but argument is of type ‘const char *’
   74 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q6.c:336:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  336 |   test_TPCDS_Q6_result_result = result;
      |                                 ^~~~~~
