tests/dataset/tpc-ds/compiler/c/q6.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:36Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:35Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int _max_int(list_int v) {
  if (v.len == 0)
    return 0;
  int m = v.data[0];
  for (int i = 1; i < v.len; i++)
    if (v.data[i] > m)
      m = v.data[i];
  return m;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *state;
  int cnt;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ca_address_sk;
  const char *ca_state;
  const char *ca_zip;
} customer_addres_t;
typedef struct {
  int len;
  customer_addres_t *data;
} customer_addres_list_t;
customer_addres_list_t create_customer_addres_list(int len) {
  customer_addres_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_addres_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_customer_sk;
  int c_current_addr_sk;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_customer_sk;
  int ss_sold_date_sk;
  int ss_item_sk;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
  int d_month_seq;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  const char *i_category;
  double i_current_price;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *state;
  int cnt;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q6_result_result;
static void test_TPCDS_Q6_result() {
  tmp1_t tmp1[] = {(tmp1_t){.state = "CA", .cnt = 10}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q6_result_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q6_result_result.len; i3++) {
      if (test_TPCDS_Q6_result_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  customer_addres_t customer_address[] = {(customer_addres_t){
      .ca_address_sk = 1, .ca_state = "CA", .ca_zip = "12345"}};
  int customer_address_len =
      sizeof(customer_address) / sizeof(customer_address[0]);
  customer_t customer[] = {
      (customer_t){.c_customer_sk = 1, .c_current_addr_sk = 1}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1},
      (store_sale_t){
          .ss_customer_sk = 1, .ss_sold_date_sk = 1, .ss_item_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {(date_dim_t){
      .d_date_sk = 1, .d_year = 1999, .d_moy = 5, .d_month_seq = 120}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  item_t item[] = {
      (item_t){.i_item_sk = 1, .i_category = "A", .i_current_price = 100.0},
      (item_t){.i_item_sk = 2, .i_category = "A", .i_current_price = 50.0}};
  int item_len = sizeof(item) / sizeof(item[0]);
  list_int tmp4 = list_int_create(date_dim_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < date_dim_len; tmp6++) {
    date_dim_t d = date_dim[tmp6];
    if (!(d.d_year == 1999 && d.d_moy == 5)) {
      continue;
    }
    tmp4.data[tmp5] = d.d_month_seq;
    tmp5++;
  }
  tmp4.len = tmp5;
  int target_month_seq = _max_int(tmp4);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i7 = 0; i7 < result.len; i7++) {
    if (i7 > 0)
      printf(",");
    result_item_t it = result.data[i7];
    printf("{");
    _json_string("state");
    printf(":");
    _json_string(it.state);
    printf(",");
    _json_string("cnt");
    printf(":");
    _json_int(it.cnt);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q6_result_result = result;
  test_TPCDS_Q6_result();
  free(tmp4.data);
  return 0;
}
